# generator-cpp-github

./:  .prettierignore  .gitignore  .npmignore  LICENSE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml  publish.yml  release.yml
app/: index.js
app/templates/: .gitignore  CMakeLists.txt  README.md  conanfile.py  justfile
app/templates/.devcontainer/: Dockerfile
app/templates/.github/workflows/: build.yml  make_release.yml  merge_check.yml
app/templates/config/: .clang-format  .clang-tidy
app/templates/config/conan/: macos-armv8.profile
app/templates/config/system/: requirements.dev.pip.txt  requirements.linux.apt.txt  requirements.macos.brew.rb  requirements.windows.choco.config
app/templates/doc/: DEVELOPMENT.md  RELEASE.md
app/templates/examples/: README.md
app/templates/include/: Foo.hpp  README.md
app/templates/modules/: README.md
app/templates/scripts/linux/: install.sh
app/templates/scripts/macos/: install.sh
app/templates/scripts/unix/: build.sh  cleanup.sh  sca.sh  test_integration.sh  test_unit.sh
app/templates/scripts/windows/: build.bat  install.bat  sca.bat  test_integration.bat  test_unit.bat
app/templates/source/: Application.cpp  Application.hpp  Foo.cpp  main.cpp
app/templates/test/: README.md
app/templates/test/integration/: conanfile.py
app/templates/test/unit/: Application.test.cpp  CMakeLists.txt
app/templates/test/unit/source/: Foo.test.cpp
cppapp/: index.js
cppapp/templates/: README.md  justfile
cppapp/templates/doc/: DEVELOPMENT.md
cppapp/templates/source/foo/: Foo.cpp  Foo.hpp
cpplib/: index.js
cpplib/templates/: CMakeLists.txt  conanfile.py
cpplib/templates/.devcontainer/: Dockerfile
cpplib/templates/.github/workflows/: merge_request.yml
cpplib/templates/assets/: README.md
cpplib/templates/cmake/: README.md
cpplib/templates/config/: .black-format
cpplib/templates/config/conan/: linux-x86_64.profile  windows-x86_64.profile
cpplib/templates/doc/: CONTRIBUTING.md  README.md  SAFETY_MANUAL.md
cpplib/templates/test/integration/: CMakeLists.txt
cpplib/templates/test/unit/: CMakeLists.txt
generators/app/: index.js
generators/app/templates/: .gitignore  CMakeLists.txt  README.md  conanfile.py
generators/app/templates/.github/workflows/: release.yml
generators/app/templates/config/conan/: macos-armv8.profile
generators/app/templates/source/: main.cpp
generators/app/templates/test/unit/: CMakeLists.txt
generators/app/templates/test/unit/source/: Foo.test.cpp
generators/lib/: index.js
generators/lib/templates/: .gitignore  LICENSE.md  README.md  justfile
generators/lib/templates/.github/workflows/: build.yml
generators/lib/templates/cmake/: config.cmake.in
generators/lib/templates/source/: README.md
generators/lib/templates/test/integration/: CMakeLists.txt
generators/lib/templates/test/unit/: README.md
generators/lib/templates/test/unit/source/: Foo.test.cpp
test/: test.js
